Bug Fixed - Dropdown Slider was overlapping bellow div Animation Added for Slide in and out User received data was getting stored in wrong keyword for localStorage

--- a/src/app/home/tabs/tabs.component.css
+++ b/src/app/home/tabs/tabs.component.css
@@ -638,7 +638,7 @@ a:hover {
 }
 
 .enact_btn {
-    width: 40%;
+    width: 55%;
     height: 45px;
     margin-top: 4px;
     font-weight: 500;
@@ -1112,6 +1112,10 @@ ul ul a {
 
 .marg_top_20 {
     margin-top: -20px;
+}
+
+.plusmarg_top_5 {
+    margin-top: 5px;
 }
 
 .width33 {
